--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^4.5.3",
     "bootswatch": "^5.1.3",
     "ngx-bootstrap": "^7.1.2",
+    "ngx-spinner": "^13.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
